compose working. database up. crud ok and ports exposed to localhost connections

--- a/products/docker-compose.yml
+++ b/products/docker-compose.yml
@@ -8,14 +8,16 @@ services:
       - MANAGEMENT_METRICS_EXPORT_PROMETHEUS_ENABLED=true
       - SPRING_DATASOURCE_URL=jdbc:mysql://products-mysql:3306/products?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true
       - SPRING_LIQUIBASE_URL=jdbc:mysql://products-mysql:3306/products?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true
-      - JHIPSTER_SLEEP=30
+      - JHIPSTER_SLEEP=20
     ports:
       - '8080:8080'
   products-mysql:
+    volumes:
+      - ~/volumes/jhipster/products/mysql/:/var/lib/mysql/
     image: mysql:8.0.26
     environment:
       - MYSQL_ALLOW_EMPTY_PASSWORD=yes
       - MYSQL_DATABASE=products
-    expose:
-      - '3306'
     command: mysqld --lower_case_table_names=1 --skip-ssl --character_set_server=utf8mb4 --explicit_defaults_for_timestamp
+    ports:
+      - '3306:3306'
