--- a/products/src/main/resources/config/application.yml
+++ b/products/src/main/resources/config/application.yml
@@ -147,12 +147,13 @@ jhipster:
     name: 'productsApp'
   # By default CORS is disabled. Uncomment to enable.
   cors:
-    allowed-origins: "*"
-    allowed-methods: "*"
-    allowed-headers: "*"
-    exposed-headers: "Authorization,Link,X-Total-Count,X-${jhipster.clientApp.name}-alert,X-${jhipster.clientApp.name}-error,X-${jhipster.clientApp.name}-params"
+    # Allow Ionic for JHipster by default (* no longer allowed in Spring Boot 2.4+)
+    allowed-origins: 'http://localhost:8100,https://localhost:8100,http://localhost:9000,https://localhost:9000, https://localhost:3000, http://localhost:3000'
+    allowed-methods: '*'
+    allowed-headers: '*'
+    exposed-headers: 'Authorization,Link,X-Total-Count,X-${jhipster.clientApp.name}-alert,X-${jhipster.clientApp.name}-error,X-${jhipster.clientApp.name}-params'
     allow-credentials: true
-    max-age: 3600
+    max-age: 1800
   mail:
     from: products@localhost
   api-docs:
