--- a/products/src/main/resources/.h2.server.properties
+++ b/products/src/main/resources/.h2.server.properties
@@ -1,5 +1,6 @@
 #H2 Server Properties
+#Fri Nov 12 00:31:23 ART 2021
 0=JHipster H2 (Disk)|org.h2.Driver|jdbc\:h2\:file\:./target/h2db/db/products|products
+webSSL=false
 webAllowOthers=true
 webPort=8092
-webSSL=false
