--- a/cart/.yo-rc.json
+++ b/cart/.yo-rc.json
@@ -41,6 +41,8 @@
     "clientTheme": "none",
     "clientThemeVariant": "",
     "withAdminUi": true,
-    "languages": ["en", "fr"]
+    "languages": ["en", "fr"],
+    "entities": ["PurchasedProduct", "Sale", "Cart"],
+    "lastLiquibaseTimestamp": 1637274513000
   }
 }
